WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
167097
setTimeout / setInterval's string execution should inherit SourceOrigin correctly
https://bugs.webkit.org/show_bug.cgi?id=167097
Summary
setTimeout / setInterval's string execution should inherit SourceOrigin corre...
Yusuke Suzuki
Reported
2017-01-16 10:41:27 PST
related to
https://github.com/tc39/proposal-dynamic-import/blob/master/HTML%20Integration.md
Attachments
Patch
(6.68 KB, patch)
2017-01-27 06:24 PST
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2017-01-27 06:24:29 PST
Created
attachment 299928
[details]
Patch
Yusuke Suzuki
Comment 2
2017-01-27 16:25:27 PST
Comment on
attachment 299928
[details]
Patch Thanks!
WebKit Commit Bot
Comment 3
2017-01-27 16:50:22 PST
Comment on
attachment 299928
[details]
Patch Clearing flags on attachment: 299928 Committed
r211314
: <
http://trac.webkit.org/changeset/211314
>
WebKit Commit Bot
Comment 4
2017-01-27 16:50:27 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug