setTimeout / setInterval's string execution should inherit SourceOrigin correctly https://bugs.webkit.org/show_bug.cgi?id=167097

Reviewed by Darin Adler.

Source/WebCore:

Tests: js/dom/modules/import-from-set-interval.html
       js/dom/modules/import-from-set-timeout.html

* bindings/js/ScriptController.cpp:
(WebCore::ScriptController::executeScriptInWorld):

LayoutTests:

We set the default SourceOrigin for the ScriptController::executeScriptInWorld.
The default SourceOrigin has the document baseURL and CachedScriptFetcher.

setTimeout and setInterval use this interface. And it uses the default SourceOrigin
for the document (Realm of the setTimeout / setInterval). This is the expected
behavior in the dynamic import proposal.

* js/dom/modules/import-from-set-interval-expected.txt: Added.
* js/dom/modules/import-from-set-interval.html: Added.
* js/dom/modules/import-from-set-timeout-expected.txt: Added.
* js/dom/modules/import-from-set-timeout.html: Added.


Canonical link: https://commits.webkit.org/184563@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211314 268f45cc-cd09-0410-ab3c-d52691b4dbfc